<resources>
    <string name="app_name">Article Assignment</string>
    <string name="No_internet_connection">Internet connection is not available. Please check...</string>
    <string name="str_OK">OK</string>
    <string name="hint_user_designation">User Designation</string>
    <string name="str_hint_time">time</string>
    <string name="str_loren_epson_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="hint_article_title">Article title goes here can be multiline.</string>
    <string name="hint_article_link">Article url goes here.</string>
    <string name="hint_likes_count">0K Likes</string>
    <string name="hint_comments_count">0K Comments</string>
    <string name="str_hint_user_city">User city</string>
    <string name="hint_username">Username</string>
    <string name="tab_article">Articles</string>
    <string name="tab_users">Users</string>
    <string name="hint_details">details</string>
    <string name="str_likes">Likes</string>
    <string name="str_comments">Comments</string>
    <string name="msg_unable_to_fatch_data">Sorry unable to fatch data.</string>
    <string name="msg_no_more_data_available">No more Data available.</string>
    <string name="title_user_details">User Profile</string>
    <string name="str_obj" translatable="false">object</string>
</resources>